Tue Apr 30 14:23:43 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_open_display): fix
	problem with finalizing non-initialized fully display
	when failing to open display.

	* tests/testxinerama.c: Xinerama test case from
	multihead branch, with some cleanups. (Start even
	if there is only one monitor, for one.)

Tue Apr 30 14:15:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c gtk/gtkselection.c: Doc fixes.

2002-04-30  Erwann Chenede - <erwann.chenede@sun.com>

        * gdk/x11/gdkimage-x11.c : rationalized multihead code
        in _gdk_x11_copy_to_image. fixes #80256 and ungrab problems.

2002-04-30  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbtree.c (gtk_text_btree_remove_tag_info): assign
	something to "prev" so that removing tag info succeeds.
	Part of #77301

	* gtk/gtktextbtree.c (_gtk_text_btree_unref): reorder so that it
	unrefs the tag table first, so that the btree is in a consistent
	state when we're removing tags from it.	

Tue Apr 30 12:28:27 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdisplay.c gdk/gdkpango.c gdk/gdkpixmap.c
	gdk/x11/gdkdisplay-x11.c gdk/x11/gdkevents-x11.c
	gdk/x11/gdkpixmap-x11.c gdk/x11/gdkx.h: Doc fixes.

Tue Apr 30 11:37:09 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c: Make multihead-safe;
	use a different IM context per display.

	* configure.in acconfig.h: Add Xinerama checks from
	multihead branch, changing HAS_XINERAMA => HAVE_XINERAMA.

	* gdk/x11/gdkdisplay-x11.c: HAS_XINERAMA => HAVE_XINERAMA.

2002-04-29  Alex Larsson  <alexl@redhat.com>

	* gdk/gdkpango.c (gdk_draw_layout_line_with_colors):
	Use tmp also if foreground is set.

Mon Apr 29 18:28:00 2002  Owen Taylor  <otaylor@redhat.com>

	Integrate Erwann Chenede's multihead changes for the gtk/ directory.

	* gtk/gtkclipboard.[ch]: Add gtk_clipboard_get_for_display(),
	make internals multihead aware.

	* gtk/gtkcolorsel.[ch]: Add